# zro

./: .gitignore  BUILD.md  CONTRIBUTING.md  INSTALLER.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/: launch.json
.github/: FUNDING.yml
.github/workflows/: pages.yml  release.yml
site/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: eval.rs  facts.rs  mod.rs  providers.rs  semantic.rs  tools.rs
src-tauri/src/browser/: clipboard.rs  cookies.rs  default_browser.rs  downloads.rs  extensions.rs  layout.rs  memory.rs  menus.rs  mod.rs  overlay.rs  passwords.rs  perf.rs  search.rs  session_cookies.rs  shields.rs  system.rs  tabs.rs
src/components/: AiPanel.tsx  CookieEditor.tsx  DownloadsPanel.tsx  FolderIcon.tsx  FolderItem.tsx  HistoryPanel.tsx  IncognitoLock.tsx  Markdown.tsx  MemoryPanel.tsx  SettingsPanel.tsx  ShieldPanel.tsx  Sidebar.tsx  StatsPanel.tsx  TabItem.tsx  TitleBar.tsx  UpdateBanner.tsx  UrlBar.tsx
src/store/: ai.ts  downloads.ts  extensions.ts  memory.ts  overlays.ts  tabs.ts  tauriStorage.ts
src/styles/: globals.css
tools/: publish.cmd  publish.ps1
zro-installer/: README.md  package.json
zro-installer/src-tauri/: Cargo.toml  tauri.conf.json
zro-installer/src-tauri/capabilities/: default.json
zro-installer/src-tauri/src/: lib.rs  main.rs
zro-installer/ui/: index.html  main.js
