[package]
name = "zro"
version = "0.1.0"
description = "zro browser"
authors = ["ThatQne"]
edition = "2021"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"

[lib]
name = "zro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
regex = "1"
sysinfo = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
turbovec = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.15"
base64 = "0.22"
# Right-click "Save Image As <format>": decode whatever the site served
# (often webp) and re-encode to the format the user picked. Trimmed to the
# codecs we offer so the binary stays lean.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
adblock = "0.13"
# Read WebView2's own saved-password store (Chromium "Login Data" SQLite +
# AES-256-GCM). bundled = compile SQLite in, no system dep.
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
# Auto-update: check GitHub Releases, verify minisign signature, install + relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Single instance: a link opened while zro is running forwards the URL to the
# existing window (new tab) instead of spawning a second zro.
tauri-plugin-single-instance = "2"

[target."cfg(windows)".dependencies]
webview2-com = "0.38"
windows-core = "0.61"
windows-future = "0.2"
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
    "Win32_UI_Shell",
    "Security_Credentials_UI",
    "Foundation",
] }

[profile.dev]
incremental = true

# Dev builds run dependencies (adblock engine, regex, image decode, TLS) in
# debug mode = 10-50x slower — the "everything is slow / fans blowing" tax of
# `tauri dev`. Optimize DEPS only: our own crate stays incremental + fast to
# rebuild, while the hot native code runs at near-release speed.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
