[package]
name = "zro-installer"
version = "0.1.0"
description = "Themed installer for the zro browser"
authors = ["ThatQne"]
edition = "2021"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"

[lib]
name = "zro_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Download the release payload + extract it.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.15"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
